--- a/page1.html
+++ b/page1.html
@@ -113,7 +113,7 @@
                         <div class="card-box">
                             <h5 class="card-title mbr-fonts-style m-0 mb-3 display-2"><a href="https://www.tandfonline.com/doi/full/10.1080/17512786.2023.2262444?casa_token=el9-nK7j814AAAAA%3AO4MVJsaoiYkVUvVxN84Y_Z-7YubXXfrqZclaazTlbVXNQieYB5G_MYTVoXdXEOOSPoTiOfOM7An6BA" class="text-primary" target="_blank">Can we detect bias in political fact-checking? Evidence from a Spanish case study</a></h5>
                             <h6 class="card-subtitle mbr-fonts-style mb-3 display-4"><strong>Journal Article - Journalism Practice</strong></h6>
-                            <p class="mbr-text mbr-fonts-style display-7">This article investigates political bias in fact-checking in Spain, using Newtral as a case study. A statistical model based on 313 fact-checks suggests that left-wing parties appear more truthful than right-wing ones. However, interviews reveal inconsistent protocols that produce noise rather than systematic bias.<br><br><strong>Keywords:</strong> fact-checking, political bias, Newtral, Spain, journalism, disinformation</p>
+                            <p class="mbr-text mbr-fonts-style display-7">This article investigates political bias in fact-checking in Spain, using Newtral as a case study. A statistical model based on 313 fact-checks suggests that left-wing parties appear more truthful than right-wing ones. However, interviews reveal inconsistent protocols that produce noise rather than systematic bias.<br><strong>Keywords:</strong> fact-checking, political bias, Newtral, Spain, journalism, disinformation</p>
                             
                         </div>
                     </div>
