--- a/page10.html
+++ b/page10.html
@@ -189,7 +189,7 @@
                             <h5 class="card-title mbr-fonts-style m-0 mb-3 display-2"><a href="https://www.tandfonline.com/doi/full/10.1080/1081602X.2021.2000471" class="text-primary" target="_blank">Homogamie sociale en Espagne à l’époque de la modernisation, 1841–1870</a></h5>
                             <h6 class="card-subtitle mbr-fonts-style mb-3 display-4"><strong>Article de revue - The History of the Family</strong></h6>
                             <p class="mbr-text mbr-fonts-style display-7">
-                                Homogamie sociale en Espagne à l’époque de la modernisation, 1841–1870
+                                Cette étude analyse l’homogamie sociale en Espagne pendant la modernisation (1841–1870) à partir de 32 000 mariages. Les résultats montrent qu’avec la croissance du secteur des services, le statut acquis a pris de l’importance sur le statut attribué, surtout dans les classes moyennes et populaires. Les élites ont maintenu des marchés matrimoniaux fermés. <br><strong>Mots-clés:</strong> homogamie sociale, modernisation, industrialisation, Espagne, marchés matrimoniaux, inégalités.
                             </p>
                             
                         </div>
