--- a/page1.html
+++ b/page1.html
@@ -86,15 +86,15 @@
                 <div class="row align-items-center">
                     <div class="col-12 col-md-4">
                         <div class="image-wrapper">
-                            <img src="assets/images/von-thunen.png-547x365.png" alt="Mobirise Website Builder">
+                            <a href="https://www.cambridge.org/core/journals/revista-de-historia-economica-journal-of-iberian-and-latin-american-economic-history/article/closing-the-price-gap-von-thunen-applied-to-wheat-markets-in-18th-century-spain/07BEB86F5CFE07A69684609A89EF9F2D" target="_blank"><img src="assets/images/von-thunen.png-547x365.png" alt="Mobirise Website Builder"></a>
                         </div>
                     </div>
                     <div class="col-12 col-md">
                         <div class="card-box">
-                            <h5 class="card-title mbr-fonts-style m-0 mb-3 display-2">Closing the price gap - Von Thünen applied to wheat markets in 18th century Spain</h5>
+                            <h5 class="card-title mbr-fonts-style m-0 mb-3 display-2"><a href="https://www.cambridge.org/core/journals/revista-de-historia-economica-journal-of-iberian-and-latin-american-economic-history/article/closing-the-price-gap-von-thunen-applied-to-wheat-markets-in-18th-century-spain/07BEB86F5CFE07A69684609A89EF9F2D" class="text-primary" target="_blank">Closing the price gap - Von Thünen applied to wheat markets in 18th century Spain</a></h5>
                             <h6 class="card-subtitle mbr-fonts-style mb-3 display-4">
                                 <strong>Journal Article - Revista de Historia Económica - Journal of Iberian and Latin American Economic History</strong></h6>
-                            <p class="mbr-text mbr-fonts-style display-7">This paper uses municipal data from the Catastro de la Ensenada (1749) to analyze wheat price formation in Castile. Applying Von Thünen’s isolated markets framework, results show that trade costs strongly influenced price gaps. Spatial autocorrelation reveals different dynamics in Madrid’s hinterland, where political interventions disrupted markets. <br><strong>Keywords:</strong> wheat markets, Von Thünen, Spain, trade costs, spatial autocorrelation, market integration.
+                            <p class="mbr-text mbr-fonts-style display-7">This paper uses municipal data from the Catastro de la Ensenada (1749) to analyze wheat price formation <em>in </em>Castile. Applying Von Thünen’s isolated markets framework, results show that trade costs strongly influenced price gaps. Spatial autocorrelation reveals different dynamics in Madrid’s hinterland, where political interventions disrupted markets. Keywords: wheat markets, Von Thünen, Spain, trade costs, spatial autocorrelation, market integration.
                             </p>
                             
                         </div>
