--- a/page10.html
+++ b/page10.html
@@ -86,13 +86,14 @@
                 <div class="row align-items-center">
                     <div class="col-12 col-md-4">
                         <div class="image-wrapper">
-                            <img src="assets/images/von-thunen.png-547x365.png" alt="Mobirise Website Builder">
+                            <a href="https://www.cambridge.org/core/journals/revista-de-historia-economica-journal-of-iberian-and-latin-american-economic-history/article/closing-the-price-gap-von-thunen-applied-to-wheat-markets-in-18th-century-spain/07BEB86F5CFE07A69684609A89EF9F2D" target="_blank"><img src="assets/images/von-thunen.png-547x365.png" alt="Mobirise Website Builder"></a>
                         </div>
                     </div>
                     <div class="col-12 col-md">
                         <div class="card-box">
-                            <h5 class="card-title mbr-fonts-style m-0 mb-3 display-2">Réduire l’écart de prix : Von Thünen appliqué aux marchés du blé en Espagne au XVIIIe siècle</h5>
-                            <h6 class="card-subtitle mbr-fonts-style mb-3 display-4"><strong>Article de revue - Revista de Historia Económica - Journal of Iberian and Latin American Economic History</strong></h6>
+                            <h5 class="card-title mbr-fonts-style m-0 mb-3 display-2"><a href="https://www.cambridge.org/core/journals/revista-de-historia-economica-journal-of-iberian-and-latin-american-economic-history/article/closing-the-price-gap-von-thunen-applied-to-wheat-markets-in-18th-century-spain/07BEB86F5CFE07A69684609A89EF9F2D" class="text-primary" target="_blank">Réduire l’écart de prix : Von Thünen appliqué aux marchés du blé en Espagne au XVIIIe siècle</a></h5>
+                            <h6 class="card-subtitle mbr-fonts-style mb-3 display-4">
+                                <strong>Article de revue - Revista de Historia Económica - Journal of Iberian and Latin American Economic History</strong></h6>
                             <p class="mbr-text mbr-fonts-style display-7">Cet article utilise les données du Cadastre de l’Ensenada (1749) pour analyser la formation des prix du blé en Castille. En appliquant le modèle des marchés isolés de Von Thünen, les résultats montrent que les coûts de transport influençaient fortement les écarts de prix. L’autocorrélation spatiale révèle des dynamiques différentes autour de Madrid, où les interventions politiques perturbaient les marchés. <br><strong>Mots-clés:</strong> marchés du blé, Von Thünen, Espagne, coûts de transport, autocorrélation spatiale, intégration des marchés.
                             </p>
                             
@@ -100,8 +101,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="item features-image">
+        </div><div class="item features-image">
             <div class="item-wrapper">
                 <div class="row align-items-center">
                     <div class="col-12 col-md-4">
