--- a/page11.html
+++ b/page11.html
@@ -86,13 +86,14 @@
                 <div class="row align-items-center">
                     <div class="col-12 col-md-4">
                         <div class="image-wrapper">
-                            <img src="assets/images/von-thunen.png-547x365.png" alt="Mobirise Website Builder">
+                            <a href="https://www.cambridge.org/core/journals/revista-de-historia-economica-journal-of-iberian-and-latin-american-economic-history/article/closing-the-price-gap-von-thunen-applied-to-wheat-markets-in-18th-century-spain/07BEB86F5CFE07A69684609A89EF9F2D" target="_blank"><img src="assets/images/von-thunen.png-547x365.png" alt="Mobirise Website Builder"></a>
                         </div>
                     </div>
                     <div class="col-12 col-md">
                         <div class="card-box">
-                            <h5 class="card-title mbr-fonts-style m-0 mb-3 display-2">Cerrando la brecha de precios: Von Thünen aplicado a los mercados de trigo en la España del siglo XVIII</h5>
-                            <h6 class="card-subtitle mbr-fonts-style mb-3 display-4"><strong>Artículo de revista - Revista de Historia Económica - Journal of Iberian and Latin American Economic History</strong></h6>
+                            <h5 class="card-title mbr-fonts-style m-0 mb-3 display-2"><a href="https://www.cambridge.org/core/journals/revista-de-historia-economica-journal-of-iberian-and-latin-american-economic-history/article/closing-the-price-gap-von-thunen-applied-to-wheat-markets-in-18th-century-spain/07BEB86F5CFE07A69684609A89EF9F2D" class="text-primary" target="_blank">Cerrando la brecha de precios: Von Thünen aplicado a los mercados de trigo en la España del siglo XVIII</a></h5>
+                            <h6 class="card-subtitle mbr-fonts-style mb-3 display-4">
+                                <strong>Artículo de revista - Revista de Historia Económica - Journal of Iberian and Latin American Economic History</strong></h6>
                             <p class="mbr-text mbr-fonts-style display-7">Este trabajo utiliza datos municipales del Catastro de la Ensenada (1749) para analizar la formación de precios del trigo en Castilla. Aplicando el marco de mercados aislados de Von Thünen, los resultados muestran que los costes de transporte influyeron decisivamente en las brechas de precios. La autocorrelación espacial revela dinámicas distintas en el entorno de Madrid, donde las intervenciones políticas alteraron los mercados. <br><strong>Palabras clave:</strong> mercados de trigo, Von Thünen, España, costes de transporte, autocorrelación espacial, integración de mercados.
                             </p>
                             
@@ -100,8 +101,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="item features-image">
+        </div><div class="item features-image">
             <div class="item-wrapper">
                 <div class="row align-items-center">
                     <div class="col-12 col-md-4">
@@ -342,7 +342,7 @@
                         <div class="card-box">
                             <h5 class="card-title mbr-fonts-style m-0 mb-3 display-2">Atrapados por la naturaleza: Rendimientos provinciales de cereales en la España del siglo XVIII</h5>
                             <h6 class="card-subtitle mbr-fonts-style mb-3 display-4"><strong>Artículo de revista - Revista de Historia Económica - Journal of Iberian and Latin American Economic History</strong></h6>
-                            <p class="mbr-text mbr-fonts-style display-7">Published in Revista de Historia Económica - Journal of Iberian and Latin American Este estudio reconstruye los rendimientos de cereales en 33 provincias españolas a mediados del siglo XVIII utilizando el Catastro de la Ensenada. Los resultados muestran grandes disparidades regionales: el norte alcanzó rendimientos cercanos a Europa avanzada, mientras que el sureste quedó rezagado por su clima árido. Se destaca cómo geografía, clima y distribución de la tierra influyeron en la productividad agraria. <br><strong>Palabras clave:</strong> rendimientos, España, agricultura, clima, desigualdad regional, Catastro de la Ensenada.History, shows that yields in the north were similar to those found in Western Europe. Although all provinces improved their yields, the differences between them remained over time.</p>
+                            <p class="mbr-text mbr-fonts-style display-7">Published in Revista de Historia Económica - Journal of Iberian and Latin American Este estudio reconstruye los rendimientos de cereales en 33 provincias españolas a mediados del siglo XVIII utilizando el Catastro de la Ensenada. Los resultados muestran grandes disparidades regionales: el norte alcanzó rendimientos cercanos a Europa avanzada, mientras que el sureste quedó rezagado por su clima árido. Se destaca cómo geografía, clima y distribución de la tierra influyeron en la productividad agraria. <br><strong>Palabras clave:</strong> rendimientos, España, agricultura, clima, desigualdad regional, Catastro de la Ensenada.</p>
                             
                         </div>
                     </div>
