--- a/page12.html
+++ b/page12.html
@@ -85,13 +85,14 @@
                 <div class="row align-items-center">
                     <div class="col-12 col-md-4">
                         <div class="image-wrapper">
-                            <img src="assets/images/von-thunen.png-547x365.png" alt="Mobirise Website Builder">
+                            <a href="https://www.cambridge.org/core/journals/revista-de-historia-economica-journal-of-iberian-and-latin-american-economic-history/article/closing-the-price-gap-von-thunen-applied-to-wheat-markets-in-18th-century-spain/07BEB86F5CFE07A69684609A89EF9F2D" target="_blank"><img src="assets/images/von-thunen.png-547x365.png" alt="Mobirise Website Builder"></a>
                         </div>
                     </div>
                     <div class="col-12 col-md">
                         <div class="card-box">
-                            <h5 class="card-title mbr-fonts-style m-0 mb-3 display-2">कीमत की खाई को पाटना: 18वीं सदी के स्पेन में गेहूं बाजारों पर फॉन थ्यूनन का प्रयोग</h5>
-                            <h6 class="card-subtitle mbr-fonts-style mb-3 display-4"><strong>जर्नल लेख - Revista de Historia Económica - Journal of Iberian and Latin American Economic History</strong></h6>
+                            <h5 class="card-title mbr-fonts-style m-0 mb-3 display-2"><a href="https://www.cambridge.org/core/journals/revista-de-historia-economica-journal-of-iberian-and-latin-american-economic-history/article/closing-the-price-gap-von-thunen-applied-to-wheat-markets-in-18th-century-spain/07BEB86F5CFE07A69684609A89EF9F2D" class="text-primary" target="_blank">कीमत की खाई को पाटना: 18वीं सदी के स्पेन में गेहूं बाजारों पर फॉन थ्यूनन का प्रयोग</a></h5>
+                            <h6 class="card-subtitle mbr-fonts-style mb-3 display-4">
+                                <strong>जर्नल लेख - Revista de Historia Económica - Journal of Iberian and Latin American Economic History</strong></h6>
                             <p class="mbr-text mbr-fonts-style display-7">यह अध्ययन 1749 के एन्सेनाडा कैडस्ट्रो के नगर डेटा का उपयोग कर कास्टिला में गेहूं की कीमत निर्माण का विश्लेषण करता है। फॉन थ्यूनन के पृथक बाज़ार मॉडल को लागू करने पर पता चला कि परिवहन लागत ने मूल्य अंतराल को गहराई से प्रभावित किया। स्थानिक आत्म सहसंबंध ने मैड्रिड के आस-पास अलग गतिशीलता को उजागर किया, जहाँ राजनीतिक हस्तक्षेप ने बाजारों को बाधित किया। <br><strong>कुंजीशब्द:</strong> गेहूं बाजार, फॉन थ्यूनन, स्पेन, परिवहन लागत, स्थानिक आत्म सहसंबंध, बाजार एकीकरण।
                             </p>
                             
@@ -99,8 +100,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="item features-image">
+        </div><div class="item features-image">
             <div class="item-wrapper">
                 <div class="row align-items-center">
                     <div class="col-12 col-md-4">
