--- a/page8.html
+++ b/page8.html
@@ -86,12 +86,12 @@
                 <div class="row align-items-center">
                     <div class="col-12 col-md-4">
                         <div class="image-wrapper">
-                            <img src="assets/images/von-thunen.png-547x365.png" alt="Mobirise Website Builder">
+                            <a href="https://www.cambridge.org/core/journals/revista-de-historia-economica-journal-of-iberian-and-latin-american-economic-history/article/closing-the-price-gap-von-thunen-applied-to-wheat-markets-in-18th-century-spain/07BEB86F5CFE07A69684609A89EF9F2D" target="_blank"><img src="assets/images/von-thunen.png-547x365.png" alt="Mobirise Website Builder"></a>
                         </div>
                     </div>
                     <div class="col-12 col-md">
                         <div class="card-box">
-                            <h5 class="card-title mbr-fonts-style m-0 mb-3 display-2">缩小价格差距：冯·屠能理论应用于18世纪西班牙小麦市场</h5>
+                            <h5 class="card-title mbr-fonts-style m-0 mb-3 display-2"><a href="https://www.cambridge.org/core/journals/revista-de-historia-economica-journal-of-iberian-and-latin-american-economic-history/article/closing-the-price-gap-von-thunen-applied-to-wheat-markets-in-18th-century-spain/07BEB86F5CFE07A69684609A89EF9F2D" class="text-primary" target="_blank">缩小价格差距：冯·屠能理论应用于18世纪西班牙小麦市场</a></h5>
                             <h6 class="card-subtitle mbr-fonts-style mb-3 display-4">
                                 <strong>期刊文章 - Revista de Historia Económica - Journal of Iberian and Latin American Economic History</strong></h6>
                             <p class="mbr-text mbr-fonts-style display-7">本文利用1749年恩塞纳达地籍的市政数据分析卡斯蒂利亚的小麦价格形成。应用冯·屠能的孤立市场理论，结果显示运输成本显著影响价格差距。空间自相关揭示了马德里腹地的不同动态，政治干预扰乱了市场。<br><strong>关键词：</strong>小麦市场, 冯·屠能, 西班牙, 运输成本, 空间自相关, 市场一体化。
@@ -101,8 +101,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="item features-image">
+        </div><div class="item features-image">
             <div class="item-wrapper">
                 <div class="row align-items-center">
                     <div class="col-12 col-md-4">
