--- a/page13.html
+++ b/page13.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ds<!DOCTYPE html>
 <html  >
 <head>
   
@@ -87,13 +87,14 @@ dth, initial-scale=1, minimum-scale=1">
                 <div class="row align-items-center">
                     <div class="col-12 col-md-4">
                         <div class="image-wrapper">
-                            <img src="assets/images/von-thunen.png-547x365.png" alt="Mobirise Website Builder">
+                            <a href="https://www.cambridge.org/core/journals/revista-de-historia-economica-journal-of-iberian-and-latin-american-economic-history/article/closing-the-price-gap-von-thunen-applied-to-wheat-markets-in-18th-century-spain/07BEB86F5CFE07A69684609A89EF9F2D" target="_blank"><img src="assets/images/von-thunen.png-547x365.png" alt="Mobirise Website Builder"></a>
                         </div>
                     </div>
                     <div class="col-12 col-md">
                         <div class="card-box">
-                            <h5 class="card-title mbr-fonts-style m-0 mb-3 display-2">تقليص فجوة الأسعار: فون تينن وتطبيقه على أسواق القمح في إسبانيا القرن 18</h5>
-                            <h6 class="card-subtitle mbr-fonts-style mb-3 display-4"><strong>مقالة في مجلة علمية - Revista de Historia Económica - Journal of Iberian and Latin American Economic History</strong></h6>
+                            <h5 class="card-title mbr-fonts-style m-0 mb-3 display-2"><a href="https://www.cambridge.org/core/journals/revista-de-historia-economica-journal-of-iberian-and-latin-american-economic-history/article/closing-the-price-gap-von-thunen-applied-to-wheat-markets-in-18th-century-spain/07BEB86F5CFE07A69684609A89EF9F2D" class="text-primary" target="_blank">تقليص فجوة الأسعار: فون تينن وتطبيقه على أسواق القمح في إسبانيا القرن 18</a></h5>
+                            <h6 class="card-subtitle mbr-fonts-style mb-3 display-4">
+                                <strong>مقالة في مجلة علمية - Revista de Historia Económica - Journal of Iberian and Latin American Economic History</strong></h6>
                             <p class="mbr-text mbr-fonts-style display-7">تستخدم هذه الدراسة بيانات بلدية من كاتاسترو دي لا إنسينادا (1749) لتحليل تكوين أسعار القمح في قشتالة. من خلال تطبيق نموذج فون تينن للأسواق المعزولة، تظهر النتائج أن تكاليف النقل أثرت بشكل كبير على فجوات الأسعار. تكشف الارتباطات المكانية عن ديناميات مختلفة حول مدريد حيث تسببت التدخلات السياسية في اضطراب الأسواق. كلمات مفتاحية: أسواق القمح، فون تينن، إسبانيا، تكاليف النقل، الارتباط المكاني، تكامل الأسواق.
                             </p>
                             
@@ -101,8 +102,7 @@ dth, initial-scale=1, minimum-scale=1">
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="item features-image">
+        </div><div class="item features-image">
             <div class="item-wrapper">
                 <div class="row align-items-center">
                     <div class="col-12 col-md-4">
