--- a/page9.html
+++ b/page9.html
@@ -87,12 +87,12 @@
                 <div class="row align-items-center">
                     <div class="col-12 col-md-4">
                         <div class="image-wrapper">
-                            <img src="assets/images/von-thunen.png-547x365.png" alt="Mobirise Website Builder">
+                            <a href="https://www.cambridge.org/core/journals/revista-de-historia-economica-journal-of-iberian-and-latin-american-economic-history/article/closing-the-price-gap-von-thunen-applied-to-wheat-markets-in-18th-century-spain/07BEB86F5CFE07A69684609A89EF9F2D" target="_blank"><img src="assets/images/von-thunen.png-547x365.png" alt="Mobirise Website Builder"></a>
                         </div>
                     </div>
                     <div class="col-12 col-md">
                         <div class="card-box">
-                            <h6 class="card-subtitle mbr-fonts-style mb-3 display-2">価格格差を縮小する：18世紀スペインの小麦市場に応用されたフォン・テューネン理論</h5>
+                            <h5 class="card-title mbr-fonts-style m-0 mb-3 display-2"><a href="https://www.cambridge.org/core/journals/revista-de-historia-economica-journal-of-iberian-and-latin-american-economic-history/article/closing-the-price-gap-von-thunen-applied-to-wheat-markets-in-18th-century-spain/07BEB86F5CFE07A69684609A89EF9F2D" class="text-primary" target="_blank">価格格差を縮小する：18世紀スペインの小麦市場に応用されたフォン・テューネン理論</a></h5>
                             <h6 class="card-subtitle mbr-fonts-style mb-3 display-4">
                                 <strong>ジャーナル記事 - Revista de Historia Económica - Journal of Iberian and Latin American Economic History</strong></h6>
                             <p class="mbr-text mbr-fonts-style display-7">本稿は1749年のエンセナーダ地籍から得た自治体データを用いて、カスティーリャの小麦価格形成を分析する。フォン・テューネンの孤立市場モデルを適用した結果、輸送コストが価格格差に強く影響したことが示された。空間自己相関はマドリード周辺で異なる力学を明らかにし、政治介入が市場を混乱させた。<br><strong>キーワード：</strong>小麦市場、フォン・テューネン、スペイン、輸送コスト、空間自己相関、市場統合。
@@ -102,13 +102,12 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="item features-image">
+        </div><div class="item features-image">
             <div class="item-wrapper">
                 <div class="row align-items-center">
                     <div class="col-12 col-md-4">
                         <div class="image-wrapper">
-                            <a href="https://www.tandfonline.com/doi/full/10.1080/17512786.2023.2262444" target="_blank"><img src="assets/images/chatgpt-image-30-jun-2025-19-27-42.png-600x400.png" alt="Mobirise Website Builder"></a>
+<a href="https://www.tandfonline.com/doi/full/10.1080/17512786.2023.2262444" target="_blank"><img src="assets/images/chatgpt-image-30-jun-2025-19-27-42.png-600x400.png" alt="Mobirise Website Builder"></a>
                         </div>
                     </div>
                     <div class="col-12 col-md">
