--- a/page19.html
+++ b/page19.html
@@ -77,7 +77,7 @@
                     <div class="text-box">
                         <h5 class="mbr-title mbr-fonts-style display-2">
                             Carlos Santiago-Caballero</h5>
-                        <p class="mbr-text mbr-fonts-style display-7">Catedrático de historia económica<br><br>Departamento de Ciencias Sociales<br>Universidad Carlos III de Madrid<br>Calle Madrid, 126 Getafe<br>CP: 28903 (Madrid) España<br><br>correo electrónico: carlos.santiago@uc3m.es<br><br>Currículum vitae completo en formato PDF<br></p>
+                        <p class="mbr-text mbr-fonts-style display-7">Catedrático de historia económica<br><br>Departamento de Ciencias Sociales<br>Universidad Carlos III de Madrid<br>Calle Madrid, 126 Getafe<br>CP: 28903 (Madrid) España<br><br>correo electrónico: carlos.santiago@uc3m.es<br><br>Full&nbsp;<a href="assets/files/Carlos-SantiagoCaballero-CV.pdf" class="text-primary" target="_blank">CV en formato pdf</a></p>
                         
                         
                     </div>
