--- a/page21.html
+++ b/page21.html
@@ -76,7 +76,7 @@
                     <div class="text-box">
                         <h5 class="mbr-title mbr-fonts-style display-2">
                             Carlos Santiago-Caballero</h5>
-                        <p class="mbr-text mbr-fonts-style display-7">経済史の正教授<br><br>社会科学部<br>カルロス3世マドリード大学<br>マドリード通り126 ゲタフェ<br>郵便番号：28903 （マドリード） スペイン<br><br>電子メール: carlos.santiago@uc3m.es<br><br>完全版履歴書（PDF形式。<br></p>
+                        <p class="mbr-text mbr-fonts-style display-7">経済史の正教授<br><br>社会科学部<br>カルロス3世マドリード大学<br>マドリード通り126 ゲタフェ<br>郵便番号：28903 （マドリード） スペイン<br><br>電子メール: carlos.santiago@uc3m.es<br><br>&nbsp;<a href="assets/files/Carlos-SantiagoCaballero-CV.pdf" class="text-primary" target="_blank">完全版履歴書（PDF形式)。</a></p>
                         
                         
                     </div>
