--- a/page22.html
+++ b/page22.html
@@ -77,7 +77,7 @@
                     <div class="text-box">
                         <h5 class="mbr-title mbr-fonts-style display-2">
                             Carlos Santiago-Caballero</h5>
-                        <p class="mbr-text mbr-fonts-style display-7">أستاذ كرسي في التاريخ الاقتصادي<br><br>قسم العلوم الاجتماعية<br>جامعة كارلوس الثالث في مدريد<br>شارع مدريد 126 خيتافي<br>الرمز البريدي: 28903 (مدريد) إسبانيا&nbsp;&nbsp;<br><br>البريد الإلكتروني: carlos.santiago@uc3m.es<br><br>السيرة الذاتية الكاملة بصيغة PDF.<br></p>
+                        <p class="mbr-text mbr-fonts-style display-7">أستاذ كرسي في التاريخ الاقتصادي<br><br>قسم العلوم الاجتماعية<br>جامعة كارلوس الثالث في مدريد<br>شارع مدريد 126 خيتافي<br>الرمز البريدي: 28903 (مدريد) إسبانيا&nbsp;&nbsp;<br><br>البريد الإلكتروني: carlos.santiago@uc3m.es<br><br>&nbsp;<a href="assets/files/Carlos-SantiagoCaballero-CV.pdf" class="text-primary" target="_blank">السيرة الذاتية الكاملة بصيغة PDF.</a></p>
                         
                         
                     </div>
