--- a/page6.html
+++ b/page6.html
@@ -76,7 +76,7 @@
                     <div class="text-box">
                         <h5 class="mbr-title mbr-fonts-style display-2">
                             Carlos Santiago-Caballero</h5>
-                        <p class="mbr-text mbr-fonts-style display-7">经济史教授<br><br>社会科学系<br>马德里卡洛斯三世大学<br>马德里街 126 赫塔费<br>邮编：28903 （马德里） 西班牙<br><br>电子邮件: carlos.santiago@uc3m.es<br><br>完整简历（PDF格式）。<br></p>
+                        <p class="mbr-text mbr-fonts-style display-7">经济史教授<br><br>社会科学系<br>马德里卡洛斯三世大学<br>马德里街 126 赫塔费<br>邮编：28903 （马德里） 西班牙<br><br>电子邮件: carlos.santiago@uc3m.es<br><br>&nbsp;<a href="assets/files/Carlos-SantiagoCaballero-CV.pdf" class="text-primary" target="_blank">完整简历（PDF格式）。</a></p>
                         
                         
                     </div>
