--- a/page20.html
+++ b/page20.html
@@ -77,7 +77,7 @@
                     <div class="text-box">
                         <h5 class="mbr-title mbr-fonts-style display-2">
                             Carlos Santiago-Caballero</h5>
-                        <p class="mbr-text mbr-fonts-style display-7">Professeur d’histoire économique<br><br>Département des sciences sociales<br>Université Carlos III de Madrid<br>Calle Madrid, 126 Getafe<br>CP : 28903 (Madrid) Espagne<br><br>courriel: carlos.santiago@uc3m.es<br><br>Curriculum vitae complet en format PDF<br></p>
+                        <p class="mbr-text mbr-fonts-style display-7">Professeur d’histoire économique<br><br>Département des sciences sociales<br>Université Carlos III de Madrid<br>Calle Madrid, 126 Getafe<br>CP : 28903 (Madrid) Espagne<br><br>courriel: carlos.santiago@uc3m.es<br><br>&nbsp;<a href="assets/files/Carlos-SantiagoCaballero-CV.pdf" class="text-primary" target="_blank">Curriculum vitae complet en format PDF</a></p>
                         
                         
                     </div>
