--- a/page23.html
+++ b/page23.html
@@ -77,7 +77,7 @@
                     <div class="text-box">
                         <h5 class="mbr-title mbr-fonts-style display-2">
                             Carlos Santiago-Caballero</h5>
-                        <p class="mbr-text mbr-fonts-style display-7">आर्थिक इतिहास के पूर्ण प्रोफ़ेसर<br><br>सामाजिक विज्ञान विभाग<br>कार्लोस तृतीय विश्वविद्यालय, मैड्रिड<br>काले मैड्रिड, 126 गेटाफे<br>पिन: 28903 (मैड्रिड) स्पेन&nbsp;&nbsp;<br><br>ईमेल: carlos.santiago@uc3m.es<br><br>पूर्ण जीवन-वृत्त (सीवी) पीडीएफ प्रारूप में।<br></p>
+                        <p class="mbr-text mbr-fonts-style display-7">आर्थिक इतिहास के पूर्ण प्रोफ़ेसर<br><br>सामाजिक विज्ञान विभाग<br>कार्लोस तृतीय विश्वविद्यालय, मैड्रिड<br>काले मैड्रिड, 126 गेटाफे<br>पिन: 28903 (मैड्रिड) स्पेन&nbsp;&nbsp;<br><br>ईमेल: carlos.santiago@uc3m.es<br><br>&nbsp;<a href="assets/files/Carlos-SantiagoCaballero-CV.pdf" class="text-primary" target="_blank">पूर्ण जीवन-वृत्त (सीवी) पीडीएफ प्रारूप में।</a></p>
                         
                         
                     </div>
